# platform

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  checkpoint.toml  checkpoint_devnet_example.toml  just_for_test  owned_commitments  rustfmt.toml  sent_commitments  shell.nix  tmp_file
.githooks/: pre-commit  pre-push
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
abci_validator_node/: Cargo.toml
abci_validator_node/src/: main.rs
components/abci_validator_node/: Cargo.toml  README.md
components/abci_validator_node/src/: abci_config.rs  abci_validator_node.rs  config.rs
components/abciapp/: Cargo.toml  README.md
components/abciapp/src/: abci_validator_node.rs
components/abciapp/src/abci/: config.rs  mod.rs
components/abciapp/src/abci/init/: mod.rs
components/abciapp/src/abci/server/: mod.rs  tx_sender.rs
components/abciapp/src/abci/server/callback/: mod.rs  pulse_cache.rs  utils.rs
components/abciapp/src/abci/staking/: abci_mock_test.rs  mod.rs
components/ac_test_cli/: Cargo.toml
components/ac_test_cli/src/: ac_test_cli.rs  main.rs  schema.json
components/account_simulator/: Cargo.toml  make-big-log.sh  make-example-log.sh  test_result.txt
components/account_simulator/src/: account_simulator.rs
components/address_identity_registry/: .README 2.md.icloud  Cargo.toml  README.md  history.txt
components/address_identity_registry/src/: address_identity_registry.rs  schema.json
components/api_service/: Cargo.toml
components/api_service/src/: api_service.rs  lib.rs
components/api_service_standalone/: Cargo.toml
components/api_service_standalone/src/: api_service_standalone.rs
components/auditor/: Cargo.toml
components/auditor/src/: main.rs
components/chat/: Cargo.toml
components/chat/src/: chat.rs
components/check_merkle/: Cargo.toml
components/check_merkle/src/: check_merkle.rs
components/cli2/: .editorconfig  Cargo.toml  README.md  build-and-run.sh  nix-run-tests.sh  run_tests.sh  run_tests_local.sh  sample.md  sandbox_transfer.sh
components/cli2/sample_outputs/: get_created_assets.md  tx_search_all.md  tx_search_last_decoded.md  with_secret_tx.md  with_secret_tx_decoded.md
components/cli2/src/: actions.rs  cli.rs  display_functions.rs  helpers.rs  kv.rs
components/cli2/src/kv/: crypto.rs
components/cli2/tests/: advanced-cli.sh  asset-type-escape.sh  balances.sh  big-transaction.sh  cli.sh  cli2_data.json  common.sh  error-handling.sh  simple-cli.sh  transfers.sh
components/codegen/: .Cargo 2.lock.icloud  .Cargo 2.toml.icloud  .Cargo 3.lock.icloud  .Cargo 3.toml.icloud  .build 2.rs.icloud  .build 3.rs.icloud  .input 2.json.icloud  .input 3.json.icloud  Cargo.toml  build.rs  input.json
components/codegen/src/: .wasm 2.rs.icloud  .wasm 3.rs.icloud  wasm.rs
components/context/: Cargo.toml
components/context/src/: context.rs
components/credentialing/: Cargo.toml
components/credentialing/src/: wasm.rs
components/credentials/: Cargo.toml
components/credentials/src/: lib.rs
components/fintools/: Cargo.toml
components/fintools/src/: lib.rs
components/fintools/src/bins/: cfg_generator.rs  fns.rs  key_generator.rs  stt.rs  xx.rs
components/fintools/src/fns/: mod.rs  utils.rs
components/http_tester/: Cargo.toml
components/http_tester/src/: main.rs
components/ledger_api_service/: Cargo.toml
components/ledger_api_service/src/: ledger_api_service.rs
components/ledger_app/: Cargo.toml
components/ledger_app/src/: ledger_app.rs  lib.rs
components/ledger_client/: Cargo.toml
components/ledger_client/src/: ledger_client.rs
components/ledger_mirror/: Cargo.toml
components/ledger_mirror/src/: ledger_mirror.rs
components/ledger_standalone/: Cargo.toml
components/ledger_standalone/src/: ledger_standalone.rs  standalone_lib.rs
container/: Dockerfile-CI-abci_validator_node  Dockerfile-CI-findorad  Dockerfile-CI-query_server  Dockerfile-CI-tendermint  Dockerfile-binary-image-dev  Dockerfile-binary-image-dev-arm  Dockerfile-binary-image-release  Dockerfile-cleveldb  (+20 more)
core/: Cargo.toml  apply_tree  apply_tree-log-0  apply_tree-log-1  apply_tree-log-10  apply_tree-log-11  apply_tree-log-12  apply_tree-log-13  apply_tree-log-2  apply_tree-log-3  apply_tree-log-4  apply_tree-log-5  apply_tree-log-6  apply_tree-log-7  apply_tree-log-8  apply_tree-log-9  apply_tree.1  proof_tree  test_tree  test_tree.1  test_tree.1-base  test_tree.2
core/src/: lib.rs  main.rs
core/src/data_model/: errors.rs  mod.rs
core/src/store/: append_only_merkle.rs  bitmap.rs  errors.rs  logged_merkle.rs  main.rs  merkle.rs  mod.rs
eian_txn_builder/: Cargo.toml  current.txn
eian_txn_builder/keys/: default.pub
eian_txn_builder/src/: main.rs
eian_txn_builder/~/.eian/keys/: default.private
ledger/: Cargo.toml
ledger/benches/: block_cache_in_rocksdb.rs  block_cache_in_sled.rs
ledger/src/: lib.rs  main.rs  permissions.rs  policies.rs  policy_script.rs  rustfmt.toml
ledger/src/data_model/: data_model.rs  effects.rs  errors.rs  mod.rs
ledger/src/staking/: cosig.rs  mod.rs
ledger/src/staking/init/: mod.rs
ledger/src/staking/ops/: mod.rs  undelegation.rs
ledger/src/store/: append_only_merkle.rs  bitmap.rs  effects.rs  logged_merkle.rs  mod.rs  smt_map.rs  store.rs
ledger/src/utils/: mod.rs  permissions.rs
ledger/tests/: txn_builder_integration_tests.rs
policy/: .gitignore  README.md  Spec.hs  debt_policy_borrower_issues.fl  design-rationale.txt  graph.cabal  policy.cabal  run.sh
policy/graph_test/: thing2.txt  thing4.txt
policy/policy_examples/: debt_policy.fl  debt_policy2_borrower_issues.fl  debt_policy_desugar.fl
policy/src/: Alloyish.hs  Compile.hs  Main.hs  Parser.hs  PolicyLang.hs  PolicyScript.hs
scp_validator_node/: Cargo.toml  build.rs
scp_validator_node/src/: TransactionHooks.h  ext_transaction.rs  lib.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/src/db/: merk_db.rs  mod.rs  temp_db.rs
storage/src/state/: cache.rs  chain_state.rs  mod.rs
storage/src/store/: mod.rs  util.rs
(+740 files in other folders)
