[workspace]
members = [
    "src/ledger",
    "src/libs/bitmap",
    "src/libs/merkle_tree",
    "src/libs/globutils",
    "src/libs/cryptohash",
    "src/libs/credentials",
    "src/libs/sliding_set",
    "src/components/finutils",
    "src/components/abciapp",
    "src/components/config",
    "src/components/wasm",
    "src/components/wallet_mobile",
    "src/components/contracts/baseapp",
    "src/components/contracts/modules/account",
    "src/components/contracts/modules/ethereum",
    "src/components/contracts/modules/evm",
    "src/components/contracts/modules/evm/test-vector-support",
    "src/components/contracts/modules/evm/precompile/basic",
    "src/components/contracts/modules/evm/precompile/frc20",
    "src/components/contracts/modules/evm/precompile/modexp",
    "src/components/contracts/modules/evm/precompile/sha3fips",
    "src/components/contracts/modules/evm/precompile/utils",
    "src/components/contracts/modules/evm/precompile/utils/macro",
    "src/components/contracts/modules/evm/precompile/staking",
    "src/components/contracts/modules/xhub",
    "src/components/contracts/modules/template",
    "src/components/contracts/primitives/core",
    "src/components/contracts/primitives/events",
    "src/components/contracts/primitives/evm",
    "src/components/contracts/primitives/mocks",
    "src/components/contracts/primitives/storage",
    "src/components/contracts/primitives/traits",
    "src/components/contracts/primitives/types",
    "src/components/contracts/primitives/rpc-core",
    "src/components/contracts/primitives/rpc-server",
    "src/components/contracts/primitives/utils",
    "src/components/contracts/primitives/wasm",
    "src/components/contracts/rpc",
]

[profile.dev]
incremental = false
overflow-checks = true

[profile.release]
incremental = false
overflow-checks = false

[profile.bench]
codegen-units = 1
overflow-checks = false

[profile.dev.package.curve25519-dalek]
opt-level = 1
overflow-checks = false

[patch.crates-io]
ark-ec = { git = "https://github.com/FindoraNetwork/ark-algebra" }
ark-ff = { git = "https://github.com/FindoraNetwork/ark-algebra" }
ark-serialize = { git = "https://github.com/FindoraNetwork/ark-algebra" }
ark-std = { git = "https://github.com/FindoraNetwork/ark-std" }
ark-bls12-381 = { git = "https://github.com/FindoraNetwork/ark-curves" }
ark-ed-on-bls12-381 = { git = "https://github.com/FindoraNetwork/ark-curves" }
curve25519-dalek = { git = "https://github.com/FindoraNetwork/curve25519-dalek" }
ed25519-dalek = { git = "https://github.com/FindoraNetwork/ed25519-dalek" }
x25519-dalek = { git = "https://github.com/FindoraNetwork/x25519-dalek" }
bulletproofs = { git = "https://github.com/FindoraNetwork/bp" }

zei = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.2.2" }
zei-accumulators = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.2.2" }
zei-algebra = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.2.2" }
zei-crypto = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.2.2" }
zei-plonk = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.2.2" }
