[workspace]
members = [
    "src/ledger",
    "src/components/finutils",
    "src/components/abciapp",
    "src/components/config",
    "src/components/wasm",
    "src/components/wallet_mobile",
    "src/components/contracts/baseapp",
    "src/components/contracts/modules/account",
    "src/components/contracts/modules/ethereum",
    "src/components/contracts/modules/evm",
    "src/components/contracts/modules/evm/precompile/basic",
    "src/components/contracts/modules/evm/precompile/frc20",
    "src/components/contracts/modules/evm/precompile/modexp",
    "src/components/contracts/modules/evm/precompile/sha3fips",
    "src/components/contracts/modules/evm/precompile/anemoi",
    "src/components/contracts/modules/evm/precompile/utils",
    "src/components/contracts/modules/evm/precompile/utils/macro",
    "src/components/contracts/modules/xhub",
    "src/components/contracts/modules/template",
    "src/components/contracts/primitives/core",
    "src/components/contracts/primitives/events",
    "src/components/contracts/primitives/evm",
    "src/components/contracts/primitives/mocks",
    "src/components/contracts/primitives/storage",
    "src/components/contracts/primitives/traits",
    "src/components/contracts/primitives/types",
    "src/components/contracts/primitives/rpc-core",
    "src/components/contracts/primitives/rpc-server",
    "src/components/contracts/primitives/utils",
    "src/components/contracts/primitives/wasm",
    "src/components/contracts/primitives/enterprise-web3",
    "src/components/contracts/rpc",
]

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = 'abort'
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
incremental = false
overflow-checks = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
codegen-units = 1
incremental = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 2
lto = "off"
incremental = true
debug-assertions = true
debug = true