[package]
name = "core"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>, Kevin Foley <kevin@eian.io>, Ajinkya Nene <ajinkya@eian.io>"]
edition = "2018"

[dependencies]
rand_chacha = "0.1.1"
arrayref = "0.3.5"
chrono = "0.4"
schnorr = "0.0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
blake2 = "0.8.0"
rand = "0.6"
ed25519-dalek = "0.9.1"
sha2 = "0.8.0"
rust-crypto = "0.2.36"
zei = { git = "ssh://github.com/eianio/zei", branch="feature/pub_access" }
curve25519-dalek = { version =  "1.0", features = ["serde"] }
