[package]
name = "ledger"
version = "0.1.0"
authors = ["Brian Rogoff <brian@findora.org", "Nathan Yospe <nathan@eian.io>, Kevin Foley <kevin@eian.io>, Ajinkya Nene <ajinkya@eian.io>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
base64 = "0.10"
bincode = "1"
bitmap = { path = "../libs/bitmap" }
blake2 = "0.8.0"
bulletproofs =  { version = "2.0.0" }
byteorder = "1.0.0"
chrono = "0.4"
cryptohash = { path = "../libs/cryptohash" }
curve25519-dalek = { version =  "1.2.1", features = ["serde"] }
ed25519-dalek = "0.9.1"
findora = { path = "../findora" }
hex = "0.3.2"
itertools = "0.8.0"
lazy_static = { version = "1.2.0" }
merkle_tree = { path = "../libs/ads/merkle_tree" }
quickcheck = "0.9.0"
rand = "0.5"
rand_chacha = "0.2"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
schnorr = "0.0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8.0"
sparse_merkle_tree = { path = "../libs/ads/sparse_merkle_tree" }
tempdir = "0.3"
tempfile = "3.1.0"
time = "0.1"
tiny-keccak = "1.4.2"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
zei = { git = "ssh://git@github.com/findoraorg/zei" }
log = "0.4.8"

[features]
TESTING = []

[dev-dependencies]
txn_builder = { path = "../components/txn_builder" }

[dependencies.fixed]
version = "0.4.6"
features = ["f16", "serde"]

[target.'cfg(not(target_arch = "wasm32"))'. dependencies]
sodiumoxide = "0.2.1"
fs2 = "0.4"

