[package]
name = "ledger"
version = "0.1.0"
authors = ["Brian Rogoff <brian@findora.org", "Nathan Yospe <nathan@eian.io>, Kevin Foley <kevin@eian.io>, Ajinkya Nene <ajinkya@eian.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
arrayref = "0.3.5"
air = { path = "../libs/ads/air" }
base64 = "0.10"
bincode = "1.3.1"
bitmap = { path = "../libs/bitmap" }
blake2 = "0.8.0"
bulletproofs = { package = "bulletproofs", git = "ssh://git@github.com/FindoraNetwork/bulletproofs", branch = "batch_verification", features = ["yoloproofs"] }
byteorder = "1.0.0"
chrono = "0.4"
cryptohash = { path = "../libs/cryptohash" }
credentials = { path = "../libs/credentials"}
curve25519-dalek = { version =  "2.0.0", features = ["serde"] }
ed25519-dalek = "1.0.0-pre3"
hex = "0.3.2"
itertools = "0.8.0"
lazy_static = { version = "1.2.0" }
log = "0.4.8"
merkle_tree = { path = "../libs/ads/merkle_tree" }
quickcheck = "0.9.0"
rand = "0.7"
rand_chacha = "0.2.2"
rand_core = { version = "0.5.1", default-features = false, features = ["alloc"] }
schnorr = "0.0.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde-strz = "1.1.1"
sha2 = "0.8.0"
sliding_set = { path = "../libs/sliding_set" }
tempdir = "0.3"
tempfile = "3.1.0"
tiny-keccak = "1.4.2"
unicode-normalization = "0.1.13"
utils = { path = "../libs/utils" }
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.1" }
zeiutils = { package = "utils", git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.1" }
sparse_merkle_tree = { path = "../libs/ads/sparse_merkle_tree" }
sled = "0.34.6"
time = "0.2.26"
wallet = { path = "../components/wallet" }

[features]
TESTING = []
debugenv = []

[dev-dependencies]
lazy_static = "1.4.0"
txn_builder = { path = "../components/txn_builder" }
quickcheck_macros = "0.9"
quickcheck = "0.9"
criterion = "0.3"

[dependencies.fixed]
version = "0.4.6"
features = ["f16", "serde"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sodiumoxide = "0.2.1"
fs2 = "0.4"

[build-dependencies]
vergen = "3.1.0"

[[bench]]
name = "block_cache_in_sled"
harness = false
