name:                graph
version:             0.1.0.0
-- synopsis:
-- description:
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable graph
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Alloyish
  default-language:    Haskell2010
  ghc-options:         -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6.0.1
                     , parsec >= 3.1.13.0
                     , text >= 1.2.3.1
                     , directory >= 1.3.3.0
                     , filepath >= 1.4.2.1
                     , mtl >= 2.2.2
                     , pretty >= 1.1.3.6

