[package]
name = "scp_validator_node"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>"]
edition = "2018"

[dependencies]
ledger = { path = "../ledger" }
ledger_app = { path = "../components/ledger_app" }
libc = "0.2.0"
arrayref = "0.3.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
bindgen = "0.48.1"

[lib]
name = "ledger_plugin"
path = "src/lib.rs"
crate-type = ["cdylib"]
