[package]
name = "storage"
version = "0.1.0"
authors = ["FindoraNetwork"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
merk = { git = "ssh://git@github.com/FindoraNetwork/merk", branch = "merk_fix_Cell_compilation_error" }
parking_lot = "0.11.1"
serde = "1.0.124"
serde_json = "1.0.64"
rand = "0.8.3"
