[package]
name = "abci_validator_node"
version = "0.0.1"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "abci_validator_node"
path = "src/abci_validator_node.rs"

[dependencies]
abci = "0.7.0"
arrayref = "0.3.5"
base64 = "0.12"
cryptohash = { path = "../../libs/cryptohash" }
flexi_logger = "0.15.2"
ledger_api_service = { path = "../ledger_api_service" }
ledger = { path = "../../ledger" }
log = "0.4.8"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.3" }
