[package]
name = "abci_validator_node"
version = "0.0.1"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "abci_validator_node"
path = "src/abci_validator_node.rs"

[dependencies]
ruc = "0.5.5"
abci = "0.7.1"
arrayref = "0.3.5"
base64 = "0.12"
cryptohash = { path = "../../libs/cryptohash" }
flexi_logger = "0.15.2"
ledger_api_service = { path = "../ledger_api_service" }
ledger = { path = "../../ledger" }
log = "0.4.8"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.0b" }

hex = "0.4.2"
wallet = { path = "../wallet" }
protobuf = "2.15.1"

ctrlc = "3.1.7"
toml = "0.5.8"

[build-dependencies]
vergen = "3.1.0"

[features]
debugenv = [ "ledger/debugenv" ]
