[package]
name = "abci_validator_node"
version = "0.0.1"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "abci_validator_node"
path = "src/abci_validator_node.rs"

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
parking_lot = "0.11.1"
abci = "0.7.1"
storage = {path = "../../storage"}
arrayref = "0.3.5"
base64 = "0.12"
cryptohash = { path = "../../libs/cryptohash" }
ledger_api_service = { path = "../ledger_api_service" }
ledger = { path = "../../ledger" }
log = "0.4.8"
env_logger = "0.8.3"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
attohttpc = { version = "0.16.3", default-features = false, features = ["compress", "json", "tls-rustls"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
context = {path = "../context"}
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.1" }

lazy_static = "1.4.0"
futures = { version = "0.3.13", features = ["thread-pool"] }

hex = "0.4.2"
wallet = { path = "../wallet" }
protobuf = "2.15.1"

ctrlc = "3.1.7"
toml = "0.5.8"

[build-dependencies]
vergen = "3.1.0"

[features]
debugenv = [ "ledger/debugenv" ]
