[package]
name = "abciapp"
version = "0.1.0"
authors = ["FindoraNetwork"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "abci_validator_node"
path = "src/abci_validator_node.rs"

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
abci = { git = "https://github.com/FindoraNetwork/rust-abci.git", branch = "feat-findora" }

parking_lot = "0.11.1"
arrayref = "0.3.5"
base64 = "0.12"
cryptohash = { path = "../../libs/cryptohash" }
bincode = "1.3.1"
ledger_api_service = { path = "../ledger_api_service" }
ledger = { path = "../../ledger" }
log = "0.4.8"
env_logger = "0.8.3"
rand = "0.8"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
attohttpc = { version = "0.16.3", default-features = false, features = ["compress", "json", "tls-rustls"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
query_api = { path =  "../query_api" }
query_server = { path =  "../query_server" }
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.4" }

lazy_static = "1.4.0"
futures = { version = "0.3.13", features = ["thread-pool"] }

hex = "0.4.2"
wallet = { path = "../wallet" }
protobuf = "2.23"

ctrlc = "3.1.7"
toml = "0.5.8"

clap = "2.33.3"

fintools = { path =  "../fintools" }
txn_builder = { path = "../txn_builder" }

[build-dependencies]
vergen = "=3.1.0"

[features]
abci_mock = [ "ledger/abci_mock" ]
debug_env = [ "ledger/debug_env" ]
