[package]
name = "ac_test_cli"
version = "0.0.1"
authors = ["Pictographer <corbett@pictographer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../core" }
rand_chacha = "0.1.1"
rand = "0.6"
# zei = { git = "ssh://github.com/eianio/zei" }
zei = { path = "../../../zei" }