[package]
name = "ac_test_cli"
version = "0.0.1"
authors = ["Pictographer <corbett@pictographer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand_chacha = "0.1.1"
rand = "0.6"
log = "0.4.8"
env_logger = "0.6.2"
# zei = { git = "ssh://github.com/eianio/zei" }
zei = { path = "../../../zei" }