[package]
name = "ac_test_cli"
version = "0.0.1"
authors = ["John D. Corbett <corbett@findora.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.2"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
rmp-serde = "0.13.7"
clap = "2.33.0"
sha2 = "0.8.0"
rand_chacha = "0.1.1"
rand = "0.6"
log = "0.4.8"
env_logger = "0.6.2"
# zei = { git = "ssh://github.com/eianio/zei" }
zei = { path = "../../../zei" }