[package]
name = "account_simulator"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>"]
edition = "2018"

[[bin]]
name = "account_simulator"
path = "src/account_simulator.rs"

[dependencies]
ledger = { path = "../../ledger", features = ["TESTING"] }
submission_server = { path = "../submission_server" }
findora = { path = "../../findora" }
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.2-4" }
actix-web = "1.0.8"
actix-service = "0.4.2"
actix-rt = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
percent-encoding = "2.1.0"
reqwest = "0.9.24"
lazy_static = "1.4.0"
subprocess = "0.1.18"
structopt = { version = "0.3" }
quickcheck = "0.9"

[dev-dependencies]
quickcheck_macros = "0.9"

