[package]
name = "account_simulator"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "account_simulator"
path = "src/account_simulator.rs"

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
actix-rt = "0.2"
actix-service = "0.4.2"
actix-web = "1.0.8"
cryptohash = { path = "../../libs/cryptohash" }
lazy_static = "1.4.0"
ledger = { path = "../../ledger", features = ["TESTING"] }
ledger_api_service = { path = "../ledger_api_service" }
network = { path = "../../libs/network" }
percent-encoding = "2.1.0"
quickcheck = "0.9"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = { version = "0.3" }
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
subprocess = "0.1.18"
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.0d" }

[dev-dependencies]
quickcheck_macros = "0.9"

