[package]
name = "address_identity_registry"
version = "0.0.1"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "address_identity_registry"
path = "src/address_identity_registry.rs"

[dependencies]
air = { path = "../../libs/ads/air" }
clap = "2.33.0"
colored = "1.9"
cryptohash = { path = "../../libs/cryptohash" }
env_logger = "0.7.1"
hex = "0.3.2"
lazy_static = { version = "1.2.0" }
log = "0.4.0"
rmp-serde = "0.13.7"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rustyline = "6.0.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
sha2 = "0.8.0"
zei = { git = "ssh://git@github.com/findoraorg/zei" }
