[package]
name = "address_identity_registry"
version = "0.0.1"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[[bin]]
name = "user"
path = "src/bin/user.rs"

[[bin]]
name = "issuer"
path = "src/bin/issuer.rs"

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"

[[bin]]
name = "mock_ledger"
path = "src/bin/mock_ledger.rs"

[dependencies]
air = { path = "../../libs/ads/air" }
async-std = "1.5.0"
clap = "2.33.0"
colored = "1.9"
credentials = { path = "../../components/credentials" }
cryptohash = { path = "../../libs/cryptohash" }
env_logger = "0.7.1"
futures = "0.3.1"
hex = "0.3.2"
lazy_static = { version = "1.2.0" }
# libp2p = "0.16.2"
linear-map = {version = "1.2.0", features = ["serde_impl"] }
log = "0.4.0"
pretty_env_logger = "0.3"
rmp-serde = "0.13.7"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", features = ["json"] }
rustyline = "6.0.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
sha2 = "0.8.0"
tokio = { version = "0.2", features = ["full", "macros"] }
urldecode = "0.1.1"
warp = "0.2"
zei = { git = "ssh://git@github.com/findoraorg/zei" }

