[package]
name = "api_service"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>"]
edition = "2018"

[lib]
path = "src/api_service.rs"

[dependencies]
actix-rt = "0.2"
actix-service = "0.4.2"
actix-web = "1.0.8"
ledger = { path = "../../ledger" }
ledger_app = {path = "../ledger_app"}
percent-encoding = "2.1.0"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
