[package]
name = "api_service_standalone"
version = "0.1.0"

[lib]
path = "src/api_service_standalone.rs"

[dependencies]
actix-rt = "0.2"
actix-service = "0.4.2"
actix-web = "1.0.8"
ledger = { path = "../../ledger" }
ledger_app = {path = "../ledger_app"}
percent-encoding = "2.1.0"
rand = "0.6"
rand_chacha = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"