[package]
name = "auditor"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "auditor"
path = "src/bin/auditor.rs"

[[bin]]
name = "gossipsub"
path = "src/bin/gossipsub.rs"

[[bin]]
name = "discover"
path = "src/bin/discover.rs"

[dependencies]
async-std = "1.5.0"
env_logger = "0.7.1"
futures = "0.3"
json = "0.12.4"
libp2p = "0.16.2"
libp2p-secio = "0.16.1"
log = "0.4.8"
names = "0.11.0"
tokio-codec = "0.1.2"


