[package]
name = "auditor"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "auditor"
path = "src/bin/auditor.rs"

[[bin]]
name = "gossipsub"
path = "src/bin/gossipsub.rs"

[[bin]]
name = "discover"
path = "src/bin/discover.rs"

[dependencies]
async-std = "1.5.0"
env_logger = "0.7.1"
futures = "0.3"
itertools = "0.8.0"
json = "0.12.4"
libp2p = "0.16.2"
libp2p-secio = "0.16.1"
log = "0.4.8"
names = "0.11.0"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
tokio = { version = "0.2", features = ["full", "macros"] }
tokio-codec = "0.1.2"
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.2-3" }


