[package]
name = "auditor"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[dependencies]
async-std = "1.5.0"
clap = "2.33.0"
cryptohash = { path = "../../libs/cryptohash" }
flexi_logger = "0.15.2"
futures = "0.3"
itertools = "0.8.0"
json = "0.12.4"
lazy_static = { version = "1.4.0" }
libp2p = "0.16.2"
libp2p-secio = "0.16.1"
log = "0.4.8"
names = "0.11.0"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
tokio = { version = "0.2", features = ["full", "macros"] }
tokio-codec = "0.1.2"
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.2-4" }


