[package]
name = "chat"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[lib]
path = "src/chat.rs"

[dependencies]
arrayref = "0.3.5"
ledger = { path = "../../ledger" }
env_logger = "0.6.2"
findora = { path = "../../findora" }
futures = "0.1"
libp2p = "0.13.0"
zei = { git = "ssh://git@github.com/findoraorg/zei" }
rand_chacha = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.22"
tokio-stdin-stdout = "0.1.5"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

