[package]
name = "check_merkle"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "check_merkle"
path = "src/check_merkle.rs"

[dependencies]
flexi_logger = "0.15.2"
ledger = { path = "../../ledger" }
log = "0.4.8"
merkle_tree = { path = "../../libs/ads/merkle_tree" }
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
utils = { path = "../../libs/utils" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

