[package]
name = "cli2"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
cryptohash = { path = "../../libs/cryptohash" }
ledger = { path = "../../ledger", features = ["TESTING"] }
ledger_api_service = { path = "../ledger_api_service" }
network = { path = "../../libs/network" }
txn_builder = { path = "../txn_builder" }
dirs = "2.0.2"
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
rand = "0.7.3"
promptly = "0.3.0"
reqwest = "0.9.24"
rusqlite = { version = "0.23.1", features = ["bundled"] }
serde = "1.0.114"
serde_derive = "1.0"
serde_json = "1.0.57"
snafu = { version = "0.6.8", features = ["backtraces"] }
structopt = { version = "0.3" }
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.3-3" }
rustyline = "6.2.0"

