[package]
name = "cli2"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"
description = "Findora CLI"
build = "build.rs"

[[bin]]
name = "findora"
path = "src/cli.rs"

[features]
# Disables the link to the bug tracker in the panic hook's output
no-bugtracker = []

[dependencies]
ruc = "0.5.5"
base64 = "0.12.3"
blake2 = "0.9.0"
chacha20poly1305 = "0.5.1"
clap = { version = "2.33", default-features = false }
cryptohash = { path = "../../libs/cryptohash" }
dirs = "2.0.2"
itertools = "0.9.0"
ledger = { path = "../../ledger", features = ["TESTING"] }
ledger_api_service = { path = "../ledger_api_service" }
network = { path = "../../libs/network" }
promptly = "0.3.0"
rand = "0.7.3"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "blocking", "json"] }
rpassword = "4.0.5"
rusqlite = { version = "0.23.1", features = ["bundled"] }
rust-argon2 = "0.8.2"
rustyline = "6.2.0"
serde = "1.0.114"
serde_derive = "1.0"
serde_json = "1.0.57"
structopt = { version = "0.3" }
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
txn_builder = { path = "../txn_builder" }
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.0a" }
zeroize = "1.1.0"
wallet = { path = "../wallet" }

[build-dependencies]
vergen = "3.1.0"

[package.metadata.deb]
name = "findora"
maintainer = "Findora Engineering <engineering@findora.org>"
copyright = "2020, Findora, All Rights Reserved"
extended-description = """\
The command line interface for interacting with the Findora ledger.\
"""
depends = "$auto"
section = "utility"
assets = [
    ["target/release/findora", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/findora/README", "644"],
]
