[package]
name = "codegen"
version = "0.1.0"
authors = ["Brian Rogoff <brian@findora.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
ledger = { path = "../../ledger" }
zei = { git = "ssh://git@github.com/findoraorg/zei" }
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
rand_chacha = "0.1.1"
txn_builder = {path = "../txn_builder"}
percent-encoding = "2.1.0"
futures = "0.1.20"

wasm-bindgen-futures = "0.3.27"
rand = "0.6"
js-sys = "0.3.27"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm.rs"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[build-dependencies]
codegen = { git = "ssh://git@github.com/findoraorg/codegen" }
serde = "1.0.101"
serde_json = "1.0.41"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
