[package]
name = "context"
version = "0.1.0"
authors = ["Findora"]
edition = "2018"

[lib]
path = "src/context.rs"

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
parking_lot = "0.11.1"
storage = {path = "../../storage"}
base64 = "0.12"
ledger = { path = "../../ledger" }
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }

[dependencies.blake2-rfc]
version = "0.2.18"
features = ["bench", "simd_asm"]

