[package]
name = "credentialing"
version = "0.1.0"

[dependencies]
rand = { version = "0.6", features = ["wasm-bindgen"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "^1.0.59"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
zei = { git = "ssh://git@github.com/findoraorg/zei" }
rand_chacha = "0.1.1"
wasm-bindgen-test = "0.2.50"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm.rs"

[build-dependencies]
serde = "1.0.101"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
