[package]
name = "credentialing"
version = "0.1.0"

[dependencies]
rand = { version = "0.6", features = ["wasm-bindgen"] }
rand_chacha = "0.1.1"
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "^1.0.59"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
wasm-bindgen-test = "0.2.50"
zei = { git = "ssh://git@github.com/findoraorg/zei" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm.rs"