[package]
name = "credentials"
version = "0.0.1"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
zei = { git = "ssh://git@github.com/findoraorg/zei" }
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
linear-map = {version = "1.2.0", features = ["serde_impl"] }
serde = "1.0"
serde_derive = "1.0"